[project]
name = "fourier_toolkit"
dynamic = ["version"]
description = "Collection of utilities to compute Fourier sums."
readme = "README.rst"
authors = [
    { name = "Sepand KASHANI", email = "sepand@kashani.ch" }
]
urls.download = "https://github.com/SepandKashani/fourier_toolkit"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "array-api-compat>=1.9,<2",
    "array-api-extra",
    "array-api-typing @ git+https://github.com/data-apis/array-api-typing.git",
    "finufft>=2.2.0,<3",
    "numpy>=2.0.0,<3",
    "opt-einsum>=3.4.0,<4",
]

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cupy-cuda13x",
    "ipython",
    "pre-commit>=4.6,<5",
    "pytest>=9.0,<10",
    "ruff>=0.15,<1",
    "scipy>=1.17,<2",
    "sphinx>=9.1,<10",
    "sphinxcontrib-bibtex>=2.7,<3",
    "ty>=0.0.30,<1",
]

[tool.hatch.metadata]
allow-direct-references = true  # needed for array-api-typing

[tool.hatch.version]
source = "vcs"
