[project]
name = "fourier_toolkit"
dynamic = ["version"]
description = "Collection of utilities to compute Fourier sums."
readme = "README.rst"
authors = [
    { name = "Sepand KASHANI", email = "sepand@kashani.ch" }
]
urls.download = "https://github.com/SepandKashani/fourier_toolkit"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "array-api-compat>=1.9,<2",
    "array-api-extra",
    "finufft>=2.2.0,<3",
    "numpy>=2.0.0,<3",
    "opt-einsum>=3.4.0,<4",
]

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[dependency-groups]
array_backend = [
    "cupy-cuda13x",
    "jax",
    "torch",
]
doc = [
    "sphinx>=9.1,<10",
    "sphinxcontrib-bibtex>=2.7,<3",
]
test = [
    "pytest>=9.0,<10",
    "scipy>=1.17,<2",
]
dev = [
    { include-group = "array_backend" },
    { include-group = "doc" },
    { include-group = "test" },
    "ipython",
    "pre-commit>=4.6,<5",
    "ruff>=0.15,<1",
    "ty>=0.0.30,<1",
]

[tool.hatch.version]
source = "vcs"
