[project]
name = "fourier_toolkit"
dynamic = ["version"]
description = "Collection of utilities to compute Fourier sums."
readme = "README.rst"
authors = [
    { name = "Sepand KASHANI", email = "sepand@kashani.ch" }
]
urls.download = "https://github.com/SepandKashani/fourier_toolkit"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "array-api-compat>=1,<2",
    "array-api-extra>=0,<1",
    "finufft>=2.2,<3",
    "numpy>=2,<3",
    "opt-einsum>=3,<4",
]

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[dependency-groups]
array_backend = [
    "cupy-cuda13x>=13,<15",
    "jax[cuda13]>=0,<1",
    "torch>=2,<3",
]
doc = [
    "sphinx>=9,<10",
    "sphinxcontrib-bibtex>=2,<3",
]
test = [
    "pytest>=9,<10",
    "scipy>=1,<2",
]
dev = [
    { include-group = "array_backend" },
    { include-group = "doc" },
    { include-group = "test" },
    "ipython",
    "pre-commit>=4,<5",
    "ruff>=0,<1",
    "ty>=0,<1",
]

[tool.hatch.version]
source = "vcs"
